Tweak mobile to fix overflow

--- a/public/components/_gist.scss
+++ b/public/components/_gist.scss
@@ -21,7 +21,7 @@ body {
 // ##──── Alignment ─────────────────────────────────────────────────────────────────────────
 #app {
 	display: grid;
-	grid-template-columns: auto 1fr;
+	grid-template-columns: auto minmax(auto, 100vw);
 	grid-template-rows: auto;
 	min-height: 100vh;
 }
@@ -88,7 +88,7 @@ article {
 		font-size: 1.5em;
 	}
 
-	//
+	// color and bad headings
 	h1,
 	h2,
 	h3,
@@ -99,11 +99,6 @@ article {
 
 		// Pad the heading text
 		margin: 1em 0;
-
-		// hack because i find long titles annoying
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
 	}
 
 	a {
